# tokenizers-ffi

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
include/: tokenizers_ffi.h
src/: lib.rs
tests/c/: test_ffi.c
tests/rust/: tokenizers.rs
